HUB-204: Added a transparent default bottom border to avoid "jumping" on hover.

--- a/themes/uhsg_theme/sass/components/_degree-programme-switcher.scss
+++ b/themes/uhsg_theme/sass/components/_degree-programme-switcher.scss
@@ -60,6 +60,8 @@
           }
         }
         li {
+          @include border-bottom;
+          border-bottom-color: transparent;
           padding-right: 2.5em;
           &:hover {
             @include border-bottom;
